<resources>
    <string name="app_name">Grocery Tracker</string>
    <string name="login_title">Login to App</string>
    <string name="signInLabel">Sign In</string>
    <string name="enterPasswordHint">Enter a password</string>
    <string name="emailAddressHint">abc@gmail.com</string>
    <string name="sign_up_detail_label">Sign UP</string>
    <string name="personalInfo">Personal Information</string>
    <string name="accountInfo">Account Information</string>
    <string name="householdInfo">Household Information</string>
    <string name="shoppingInfo">Shopping Information</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="Height">Height <i>(in centimetres)</i> </string>
    <string name="weight">Weight <i>(in kilograms)</i></string>
    <string name="gender">Gender</string>
    <string name="postcode">Postcode</string>
    <string name="household">Number of people in your household</string>
    <string name="adult_number">Number of adults in your household</string>
    <string name="children_number">Number of children in your household</string>
    <string name="makeup">Make-up in house</string>
    <string name="btnSubmit">Create Account</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblWelcome">This is where welcome goes</string>
    <string name="signUp">No Account? Sign Up</string>
    <string name="Welcome_message_Button">Get Started</string>
    <string name="Welcome_Message">Welcome To the GLOBE Online Grocery Study</string>
    <string name="addFeedback">Add Feedback</string>
    <string name="aboutGLOBE">About the study</string>
    <string name="onlineSurvey">Online Survey</string>
    <string name="shareReceipts">Share Receipts</string>
    <string name="FAQ">FAQ</string>
    <string name="faqlong">Frequently Asked Questions</string>
    <string name="provideFeedback">Feedback</string>
    <string name="aboutTitle">About the study</string>
    <string name="sign_in_text">Sign In</string>
    <string name="logout">Logout</string>
    <string name="lblSignUpTitle">Sign Up</string>
    <string name="lblName">Ex: John Smiths</string>
    <string name="lblAge">Ex: 35</string>
    <string name="lblHeight">Ex: 150</string>
    <string name="lblWeight">Ex: 50</string>
    <string name="lblPostcode">Ex: 1234</string>
    <string name="lblNumberHouse">Ex: 5</string>
    <string name="lblNumberAdults">Ex: 2</string>
    <string name="lblNumberChild">Ex: 3</string>
    <string name="lblShoppingFrequency">Which best describes your grocery shopping frequency?</string>
    <string name="lblPassword">Enter your preferred password</string>
    <string name="receiptLabelName">Enter a name for your receipt</string>
    <string name="lblNoFile">No file selected</string>
    <string name="btnUploadLabel">Upload receipt</string>
    <string name="lblReceiptDescription">Add your grocery shopping receipt here</string>
    <string name="lblTitle">Online Grocery Tracker</string>
    <string name="msgUploadFailed">Upload Failed</string>
    <string name="msgUploadSuccess">Upload Complete</string>
    <string name="msgNoFile">Please select a file</string>
    <string name="loginTitle">Online Grocery Tracker</string>
    <string name="AboutText"><![CDATA[<b>Thank you for agreeing to join our \'Grocery Tracker\' research study.</b><br> What we eat and how much we eat has substantial health, social and economic implications for individuals, families, and societies. We wish to track household purchases over time so that we can use this data to inform policy and practice to ensure healthy foods and beverage are affordable for everyone. With the simple click of a button your anonymized purchase record will be sent to our database where it will be then stored in our cloud for further analysis. You have the option to opt out of the study at any time.]]></string>
    <string name="uploadReceiptTitle">Share your receipts</string>
    <string name="globe_logo_desc">GLOBE logo</string>
    <string name="no_receipts_added_msg">No receipts added</string>
    <string name="receipts">Receipts</string>
    <string name="about_globe_desc">About GLOBE</string>
    <string name="do_online_survey_desc">Do online survey</string>
    <string name="share_your_receipt_desc">Share your receipt</string>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Prefer Not To Say</item>
        <item>Other</item>
    </string-array>
    <string-array name="shopnumber">
        <item>Select how often you shop</item>
        <item>Weekly or more</item>
        <item>Fortnightly</item>
        <item>Monthly or less</item>
    </string-array>
    <string name="week">week</string>
    <string name="fortnight">fortnight</string>
    <string name="month">month</string>
    <string name="channel_name">Grocery Tracker Reminders</string>
    <string name="channel_description">Reminds you to add your receipts at regular intervals.</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_text">You\'ve not added a grocery receipt in a  </string>
    <string name="reminders_debug">Reminders Debug</string>
    <string name="minutes">Minutes</string>
    <string name="converting">Converting pdf to csv...</string>
    <string name="reminder_text_end">. Please remember to upload your receipts as soon as possible.</string>
</resources>
