<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2ffc7"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".screens.Login">

    <ProgressBar
        android:id="@+id/loginprog"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/signInForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginTitle"
                style="@style/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title" />

            <LinearLayout
                style="@style/fieldGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/labelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <AutoCompleteTextView
                    android:id="@+id/enterUsername"
                    style="@style/inputField"
                    android:layout_width="match_parent"
                    android:hint="@string/emailAddressHint"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                style="@style/fieldGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/labelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginPasswordDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterPassword"
                        style="@style/inputField"
                        android:layout_width="match_parent"
                        android:autofillHints=""
                        android:hint="@string/enterPasswordHint"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInLabel"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/signUpButton"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="navSignUp"
                android:text="@string/signUp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>